fix footer alignment by adding  clear: both;

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -20,6 +20,7 @@ body {
 
 .footer {
 	margin-top: 50px;
+    clear: both;
 	color: $grayLight;
 	a {
 		color: $gray;
